# val.repo

./: .nojekyll  LICENSE  README.md  _quarto.yml  index.html  index.qmd  listings.json  sitemap.xml
.github/workflows/: publish-website.yml  update-repos.yml
_site/: robots.txt
inst/source/ABCoptim/: DESCRIPTION  MD5
inst/source/ABM/: DESCRIPTION  MD5
inst/source/ABPS/: DESCRIPTION  MD5  NAMESPACE  NEWS
inst/source/ABRSQOL/: DESCRIPTION  LICENSE  MD5  NAMESPACE
inst/source/ABSurvTDC/: DESCRIPTION  MD5  NAMESPACE
inst/source/ACA/: DESCRIPTION  MD5  NAMESPACE
inst/source/ACE.CoCo/: DESCRIPTION  MD5  NAMESPACE
inst/source/ACEP/: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS.md  README.md
inst/source/ACEsearch/: DESCRIPTION  LICENSE  MD5
inst/source/ACEsimFit/: DESCRIPTION  MD5  README.md
inst/source/ACEt/: DESCRIPTION  MD5  NAMESPACE
inst/source/ACNE/: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md
inst/source/ACSSpack/: DESCRIPTION  MD5
inst/source/ACSWR/: DESCRIPTION  MD5  (+1 more)
inst/source/AnalyzeFMRI/: DESCRIPTION  INDEX  MD5  NAMESPACE  TODO  configure  configure.ac
inst/source/AnalyzeFMRI/R/: analyzeFMRI.R  niftiFMRI.R  threshold.R  with_dir.R
inst/source/AnalyzeFMRI/inst/: AnalyzeFMRI.gui.R  CITATION  HISTORY  ICA.gui.R  ICAst.gui.R  README  README.win  example-nifti.hdr  example-nifti.img  example.hdr  example.img  example.mat  plot.volume.gui.R  smoothing.examples.R
inst/source/AnalyzeFMRI/inst/niftidoc/: intent-code.txt  xyzt-units.txt
inst/source/AnalyzeFMRI/man/: GaussSmoothArray.Rd  GaussSmoothKernel.Rd  ICAspat.Rd  ICAtemp.Rd  N2G.Class.Probability.Rd  N2G.Density.Rd  N2G.Fit.Rd  N2G.Inverse.Rd  N2G.Likelihood.Ratio.Rd  N2G.Likelihood.Rd  N2G.Rd  N2G.Region.Rd  N2G.Spatial.Mixture.Rd  N2G.Transform.Rd  NonLinearSmoothArray.Rd  Q2R.Rd  R2Q.Rd  Sim.3D.GRF.Rd  Sim.3D.GammaRF.Rd  SmoothEst.Rd  Threshold.Bonferroni.Rd  analyze2nifti.Rd  centering.Rd  cluster.threshold.Rd  cov.est.Rd  diminfo2fps.Rd  eigenvalues.Rd  f.analyze.file.summary.Rd  f.analyzeIO.gui.Rd  f.basic.hdr.list.create.Rd  f.basic.hdr.nifti.list.create.Rd  f.complete.hdr.nifti.list.create.Rd  f.ica.fmri.Rd  f.ica.fmri.gui.Rd  f.icast.fmri.Rd  f.icast.fmri.gui.Rd  f.nifti.file.summary.Rd  f.plot.ica.fmri.Rd  f.plot.ica.fmri.jpg.Rd  f.plot.volume.gui.Rd  (+43 more)
inst/source/AnalyzeFMRI/src/: AnalyzeFMRI_init.c  Makevars.in  analyzeFMRI.c  lsame.unused  niftiFMRI.c  sblas.unused  slamc.unused  slapack.unused  spatial.c  spatial.est.c  spatial.filters.linear.f  spatial.filters.non.linear.c  spatial.mixture.c  verR.h  wrapper.f
inst/source/AnalyzeFMRI/tests/: test.R  test.Rout.save  test.array.hdr  test.array.img
inst/source/alcyon/src/libs/salalib/: CMakeLists.txt  README.md  alllinemap.cpp  alllinemap.hpp  analysisresult.hpp  analysistype.hpp  attributemap.hpp  attributetable.cpp  attributetable.hpp  attributetablehelpers.hpp  attributetableindex.cpp  attributetableindex.hpp  attributetableview.cpp  attributetableview.hpp  axialminimiser.cpp  axialminimiser.hpp  axialpolygons.cpp  axialpolygons.hpp  bspnodetree.hpp  connector.cpp  connector.hpp  displayparams.hpp  entityparsing.cpp  entityparsing.hpp  exportutils.cpp  exportutils.hpp  fileproperties.hpp  geometrygenerators.cpp  geometrygenerators.hpp  gridproperties.cpp  gridproperties.hpp  ianalysis.hpp  iaxial.hpp  importtypedefs.hpp  importutils.cpp  importutils.hpp  isegment.hpp  isovist.cpp  isovist.hpp  isovistdef.hpp  (+44 more)
inst/source/alcyon/src/libs/salalib/agents/: CMakeLists.txt  agent.cpp  agent.hpp  agentanalysis.cpp  agentanalysis.hpp  agentga.cpp  agentga.hpp  agentprogram.cpp  agentprogram.hpp
inst/source/alcyon/src/libs/salalib/axialmodules/: CMakeLists.txt  axialintegration.cpp  axialintegration.hpp  axiallocal.cpp  axiallocal.hpp  axialstepdepth.cpp  axialstepdepth.hpp
inst/source/alcyon/src/libs/salalib/genlib/: CMakeLists.txt  bsptree.cpp  bsptree.hpp  comm.hpp  containerutils.hpp  edgeu.cpp  edgeu.hpp  event2f.hpp  exceptions.hpp  line4f.cpp  line4f.hpp  pafmath.cpp  pafmath.hpp  pflipper.hpp  point2f.cpp  point2f.hpp  point3f.hpp  poly.cpp  poly.hpp  readwritehelpers.hpp  region4f.cpp  region4f.hpp  regiontree.cpp  regiontree.hpp  simpleline.hpp  simplematrix.hpp  stringutils.cpp  stringutils.hpp  xmlparse.cpp  xmlparse.hpp
inst/source/alcyon/src/libs/salalib/parsers/: CMakeLists.txt  dxfp.cpp  dxfp.hpp  mapinfodata.cpp  mapinfodata.hpp  ntfp.cpp  ntfp.hpp  tigerp.cpp  tigerp.hpp
inst/source/alcyon/src/libs/salalib/resources/: graph.hexpat
inst/source/alcyon/src/libs/salalib/segmmodules/: CMakeLists.txt  segmangular.cpp  segmangular.hpp  segmhelpers.hpp  segmmetric.cpp  segmmetric.hpp  segmmetricpd.cpp  segmmetricpd.hpp  segmmetricshortestpath.cpp  segmmetricshortestpath.hpp  segmtopological.cpp  segmtopological.hpp  segmtopologicalpd.cpp  segmtopologicalpd.hpp  segmtopologicalshortestpath.cpp  segmtopologicalshortestpath.hpp  segmtulip.cpp  segmtulip.hpp  segmtulipdepth.cpp  segmtulipdepth.hpp  segmtulipshortestpath.cpp  segmtulipshortestpath.hpp
inst/source/alcyon/src/libs/salalib/vgamodules/: CMakeLists.txt  extractlinkdata.cpp  extractlinkdata.hpp  ivga.hpp  ivgaangular.hpp  ivgametric.hpp  ivgatraversing.hpp  ivgavisual.hpp  vgaangular.cpp  vgaangular.hpp  vgaangulardepth.cpp  vgaangulardepth.hpp  vgaangularopenmp.cpp  vgaangularopenmp.hpp  vgaangularshortestpath.cpp  vgaangularshortestpath.hpp  vgaisovist.cpp  vgaisovist.hpp  vgaisovistzone.cpp  vgaisovistzone.hpp  vgametric.cpp  vgametric.hpp  vgametricdepth.cpp  vgametricdepth.hpp  vgametricdepthlinkcost.cpp  vgametricdepthlinkcost.hpp  vgametricopenmp.cpp  vgametricopenmp.hpp  vgametricshortestpath.cpp  vgametricshortestpath.hpp  vgametricshortestpathtomany.cpp  vgametricshortestpathtomany.hpp  vgathroughvision.cpp  vgathroughvision.hpp  vgavisualglobal.cpp  vgavisualglobal.hpp  vgavisualglobaldepth.cpp  vgavisualglobaldepth.hpp  vgavisualglobalopenmp.cpp  vgavisualglobalopenmp.hpp  (+8 more)
site_libs/bootstrap/: bootstrap-1796cb81e46b074787066cb281036f70.min.css  bootstrap-dark-638be7aba69c6430f6801bc37caf61ac.min.css
src/contrib/: PACKAGES  README.md
(+19629 files in other folders)
